--- a/firmware_mod/config/timelapse.conf
+++ b/firmware_mod/config/timelapse.conf
@@ -1,8 +1,10 @@
 # Interval between snaps, in seconds
-TIMELAPSE_INTERVAL=2.0
+TIMELAPSE_INTERVAL=5
 # Duration of the script should run, in minutes, set to 0 for unlimited
-TIMELAPSE_DURATION=0
+TIMELAPSE_DURATION=250
 # Save dir config
 SAVE_DIR_PER_DAY=1
 # Enable compression
-COMPRESSION_QUALITY=80
+COMPRESSION_QUALITY=25
+#How long Timelapse should be
+TIMELAPSE_LENGTH=60
